send email white spaces fix 2

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -927,5 +927,5 @@ iframe #WordViewerStatusBar {
   }
 }
 .ql-editor{
-  white-space: unset;
+  white-space: unset !important;
 }
